--- a/css/about.css
+++ b/css/about.css
@@ -11,6 +11,9 @@ display: none;
 .pc{
 display: block;
 }
+.top{
+    position: relative;
+}
 .top img{
 width: 100%;
 height: 100vh;
@@ -28,7 +31,6 @@ text-shadow: 0 0 8px rgb(0, 0, 0, 1.4);
 letter-spacing: 1.5rem;
 position: absolute;
 margin: auto;
-position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%,-50%);
@@ -644,7 +646,6 @@ object-fit: cover;
 }
 .top h2{
 font-size: 50px;
-margin-top: -100px;
 }
 .about{
 display: flex;
