--- a/css/work.css
+++ b/css/work.css
@@ -1,3 +1,6 @@
+.top{
+position: relative;
+}
 .top img{
 width: 100%;
 height: 100vh;
@@ -278,7 +281,6 @@ object-fit: cover;
 }
 .top h2{
 font-size: 50px;
-margin-top: -100px;
 }
 .work{
 margin-top: 100px;
