--- a/css/mito.css
+++ b/css/mito.css
@@ -24,10 +24,11 @@ margin: 100px 0 100px 0;
 .table_content{
 margin-left: auto;
 margin-right: auto;
+max-width: 1120px;
 }
 .td-1{
 width: 200px;
-height: 70px;
+height: 75px;
 font-weight: 600;
 }
 .design{
