--- a/css/about.css
+++ b/css/about.css
@@ -23,12 +23,12 @@ z-index: 0;
 }
 .top h2{
 color: #fff;
-font-family: 'Yellowtail', cursive;
+font-family: 'Libre Bodoni', serif;
 font-size: 130px;
 font-weight: 500;
 text-align: center;
 text-shadow: 0 0 8px rgb(0, 0, 0, 1.4);
-letter-spacing: 1.5rem;
+letter-spacing: 0.5rem;
 position: absolute;
 margin: auto;
 top: 50%;
@@ -59,7 +59,7 @@ font-weight: 500;
 margin: 0;
 }
 .about_content h3{
-font-family: LFT Etica Sheriff;
+font-family:  'Lora', serif;
 font-size: 24px;
 font-weight: 500;
 margin: 0;
@@ -80,7 +80,7 @@ line-height: 2.0rem;
 margin-top: 300px;
 }
 .skill_title{
-font-family: LFT Etica Sheriff;
+font-family: 'Lora', serif;
 font-size: 100px;
 font-weight: 500;
 color: #4B4B4B;
