--- a/css/contact.css
+++ b/css/contact.css
@@ -14,12 +14,12 @@ object-fit: cover;
 }
 .top h2{
 color: #fff;
-font-family: 'Yellowtail', cursive;
+font-family: 'Libre Bodoni', serif;
 font-size: 100px;
 font-weight: 500;
 text-align: center;
 text-shadow: 0 0 8px rgb(0, 0, 0, 1.4);
-letter-spacing: 1.5rem;
+letter-spacing: 0.5rem;
 position: absolute;
 z-index: 5;
 right: 0;
