--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ display: block;
 text-decoration: none;
 text-align: center;
 font-size: 20px;
-font-family: 'Yellowtail',cursive;
+font-family: 'Libre Bodoni', serif;
 margin-bottom: 24px;
 }
 .nav-tiems_item:last-child a{
@@ -150,7 +150,7 @@ height: 105px;
 display: flex;
 justify-content: space-evenly;
 color: #fff;
-font-family: 'Yellowtail',cursive;
+font-family: 'Libre Bodoni', serif;
 font-size: 15px;
 font-weight: 300;
 position: relative;
