--- a/css/work.css
+++ b/css/work.css
@@ -10,12 +10,12 @@ z-index: 0;
 }
 .top h2{
 color: #fff;
-font-family: 'Yellowtail', cursive;
+font-family: 'Libre Bodoni', serif;
 font-size: 130px;
 font-weight: 500;
 text-align: center;
 text-shadow: 0 0 8px rgb(0, 0, 0, 1.4);
-letter-spacing: 1.5rem;
+letter-spacing: 0.5rem;
 position: absolute;
 top: 50%;
 left: 50%;
@@ -33,7 +33,7 @@ gap: 75px;
 .choice a{
 text-decoration: none;
 color: #4C4C4C;
-font-family: LFT Etica Sheriff;
+font-family: 'Lora', serif;
 font-size: 30px;
 }
 .choice a:hover {
@@ -87,12 +87,12 @@ transform:scale(1.2,1.2);
 transition:1s all;
 }
 .work_content h2{
-font-family: LFT Etica Sheriff;
+font-family: 'Lora', serif;;
 font-size: 35px;
 font-weight: 500;
 }
 .work_content p{
-font-family: LFT Etica Sheriff;
+font-family: 'Lora', serif;
 font-size: 18px;
 font-weight: 500;
 color: #646464;
