--- a/css/ui.css
+++ b/css/ui.css
@@ -29,7 +29,7 @@ max-width: 1120px;
 }
 .td-1,.movie{
 width: 200px;
-height: 45px;
+height: 75px;
 font-weight: 600;
 }
 .movie{
@@ -118,6 +118,9 @@ display: grid;
 .td-1,.td-2{
 display: flex;
 }
+.td-1,.movie{
+height: 38px;
+}
 .td-2{
 padding-bottom: 35px;
 }
@@ -139,6 +142,9 @@ display: grid;
 }
 .td-1,.td-2{
 display: flex;
+}
+.td-1,.movie{
+height: 38px;
 }
 .td-2{
 padding-bottom: 35px;
@@ -167,5 +173,8 @@ height: 38px;
 }
 .td-2{
 padding-bottom: 35px;
+}
+.td-1,.movie{
+height: 38px;
 }
 }
